# docker-django-project

./: .example.env.local  .gitignore  .my_pgpass  Dockerfile  docker-compose.yml  entrypoint.prod.sh  main.py  pyproject.toml  requirements.txt
mysite/: settings.py  urls.py
mysite/polls/: admin.py  models.py  views.py
mysite/polls/migrations/: 0001_initial.py
mysite/theme/: apps.py
polls/: urls.py
polls/templates/polls/: base.html
