[project]
name = "docker-django-project"
version = "0.0.1"
description = "Projeto base para projetos em Django"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "dj-database-url>=3.0.0",
    "django>=5.2.3",
    "django-browser-reload>=1.18.0",
    "django-tailwind>=4.0.1",
    "python-decouple>=3.8",
]
